--- a/.github/workflows/CI-Build.yml
+++ b/.github/workflows/CI-Build.yml
@@ -17,7 +17,7 @@ jobs:
   windows:
     strategy:
       matrix:
-        package: [ "unpacked", "setup" ]
+        os-version: [ "x64" ]
         
     runs-on: windows-latest
     steps:
@@ -42,26 +42,26 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
-      - name: upload-unpacked
-        if: matrix.package == 'unpacked'
+      - name: upload-setup
         uses: actions/upload-artifact@v3
         with:
-          name: Final2x-windows-x64-${{ matrix.package }}
+          name: Final2x-windows-${{ matrix.os-version }}-setup
+          path: dist/*.exe
+
+      - name: upload-unpacked
+        uses: actions/upload-artifact@v3
+        with:
+          name: Final2x-windows-${{ matrix.os-version }}-unpacked
           path: dist/win-unpacked
 
-      - name: upload-setup
-        if: matrix.package == 'setup'
-        uses: actions/upload-artifact@v3
-        with:
-          name: Final2x-windows-x64-${{ matrix.package }}
-          path: dist/*.exe
+
 
 
   macos:
     strategy:
       matrix:
         os-version: [ "x64", "arm64" ]
-        package: [ "unpacked", "dmg" ]
+        
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
@@ -107,24 +107,22 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
       - name: upload-unpacked
-        if: matrix.package == 'unpacked'
         uses: actions/upload-artifact@v3
         with:
-          name: Final2x-macos-${{ matrix.os-version }}-${{ matrix.package }}
+          name: Final2x-macos-${{ matrix.os-version }}-dmg
           path: dist/*.dmg
 
       - name: upload-dmg
-        if: matrix.package == 'dmg'
         uses: actions/upload-artifact@v3
         with:
-          name: Final2x-macos-${{ matrix.os-version }}-${{ matrix.package }}
+          name: Final2x-macos-${{ matrix.os-version }}-unpacked
           path: dist/*.zip
 
 
   ubuntu:
-#     strategy:
-#       matrix:
-#         package: [ "unpacked", "setup" ]
+    strategy:
+      matrix:
+        os-version: [ "x64" ]
         
     runs-on: ubuntu-20.04
     steps:
@@ -150,23 +148,29 @@ jobs:
           npm run build:linux
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          
+      - name: upload-snap
+        uses: actions/upload-artifact@v3
+        with:
+          name: Final2x-ubuntu-${{ matrix.os-version }}-snap
+          path: dist/*.snap
+          
+      - name: upload-AppImage
+        uses: actions/upload-artifact@v3
+        with:
+          name: Final2x-ubuntu-${{ matrix.os-version }}-AppImage
+          path: dist/*.AppImage
+ 
+      - name: upload-deb
+        uses: actions/upload-artifact@v3
+        with:
+          name: Final2x-ubuntu-${{ matrix.os-version }}-deb
+          path: dist/*.deb
 
-      - name: test
-        run: |
-          cd dist
-          ls
-         
+      - name: upload-unpacked
+        uses: actions/upload-artifact@v3
+        with:
+          name: Final2x-ubuntu-${{ matrix.os-version }}-unpacked
+          path: dist/linux-unpacked
 
-#       - name: upload-unpacked
-#         if: matrix.package == 'unpacked'
-#         uses: actions/upload-artifact@v3
-#         with:
-#           name: Final2x-windows-x64-${{ matrix.package }}
-#           path: dist/win-unpacked
 
-#       - name: upload-setup
-#         if: matrix.package == 'setup'
-#         uses: actions/upload-artifact@v3
-#         with:
-#           name: Final2x-windows-x64-${{ matrix.package }}
-#           path: dist/*.exe
