--- a/.github/workflows/CI-Build.yml
+++ b/.github/workflows/CI-Build.yml
@@ -189,3 +189,53 @@ jobs:
           path: dist/linux-unpacked/Final2x-ubuntu-${{ matrix.os-version }}-unpacked.zip
 
 
+  linux-pip:
+    strategy:
+      matrix:
+        os-version: [ "x64" ]
+
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 20
+
+      - name: build
+        run: |
+          npm install
+          npm run build:linux-${{ matrix.os-version }}
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+
+      - name: zip-unpacked
+        run: |
+          cd ./dist/linux-unpacked
+          zip -9 -r Final2x-linux-pip-${{ matrix.os-version }}-unpacked.zip ./*
+
+      - name: upload-snap
+        uses: actions/upload-artifact@v3
+        with:
+          name: Final2x-linux-pip-${{ matrix.os-version }}-snap
+          path: dist/*.snap
+
+      - name: upload-AppImage
+        uses: actions/upload-artifact@v3
+        with:
+          name: Final2x-linux-pip-${{ matrix.os-version }}-AppImage
+          path: dist/*.AppImage
+
+      - name: upload-deb
+        uses: actions/upload-artifact@v3
+        with:
+          name: Final2x-linux-pip-${{ matrix.os-version }}-deb
+          path: dist/*.deb
+
+      - name: upload-unpacked
+        uses: actions/upload-artifact@v3
+        with:
+          name: Final2x-linux-pip-${{ matrix.os-version }}-unpacked
+          path: dist/linux-unpacked/Final2x-linux-pip-${{ matrix.os-version }}-unpacked.zip
