--- a/.github/workflows/CI-Test.yml
+++ b/.github/workflows/CI-Test.yml
@@ -29,12 +29,12 @@ jobs:
         with:
           node-version: 20
 
-      - name: Download Final2x-core and unzip
-        run: |
-          cd ./resources
-          wget https://github.com/Tohrusky/Final2x-core/releases/download/2023-06-27/Final2x-core-ubuntu-20.04.zip -O Final2x-core.zip
-          unzip -d ./Final2x-core Final2x-core.zip
-          rm Final2x-core.zip
+#      - name: Download Final2x-core and unzip
+#        run: |
+#          cd ./resources
+#          wget https://github.com/Tohrusky/Final2x-core/releases/download/2023-06-27/Final2x-core-ubuntu-20.04.zip -O Final2x-core.zip
+#          unzip -d ./Final2x-core Final2x-core.zip
+#          rm Final2x-core.zip
 
       - name: Test
         run: |
