--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "electron-vite dev",
     "test": "vitest",
+    "test-cov": "vitest run --coverage",
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts,.vue --fix",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
@@ -31,6 +32,7 @@
     "@vicons/antd": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
     "core-js": "^3.31.0",
+    "jsdom": "^22.1.0",
     "naive-ui": "^2.34.3",
     "pinia": "^2.1.4",
     "pinia-plugin-persistedstate": "^3.1.0",
@@ -38,7 +40,7 @@
     "systeminformation": "^5.18.4",
     "typescript": "^4.9.5",
     "vite": "^4.3.9",
-    "vitest": "^0.29.3",
+    "vitest": "^0.32.4",
     "vue": "^3.2.47",
     "vue-clipboard3": "^2.0.0",
     "vue-i18n": "^9.2.2",
@@ -53,8 +55,10 @@
     "@rushstack/eslint-patch": "^1.3.2",
     "@types/node": "20.3.1",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vitest/coverage-v8": "^0.32.4",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
+    "@vue/test-utils": "^2.4.0",
     "electron": "^25.2.0",
     "electron-builder": "^24.4.0",
     "electron-vite": "^1.0.23",
