update CI test codecov

--- a/.github/workflows/CI-Test.yml
+++ b/.github/workflows/CI-Test.yml
@@ -37,6 +37,6 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
       - name: Codecov
-      - uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
