--- a/.github/workflows/CI-Test.yml
+++ b/.github/workflows/CI-Test.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Test
         run: |
           npm install
+          npm run lint
           npm run test-cov
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
