--- a/.github/workflows/issue-helper.yml
+++ b/.github/workflows/issue-helper.yml
@@ -4,7 +4,23 @@ on:
   issues:
     types: [opened, reopened, edited]
 
-jobs:          
+jobs:  
+  check-inactive:
+    runs-on: ubuntu-latest
+    steps:
+      - name: close-issues
+        uses: actions-cool/issues-helper@v2
+        with:
+          actions: 'close-issues'
+          token: ${{ secrets.GH_TOKEN }}
+          inactive-day: 30  
+          body: |
+            Hello @${{ github.event.issue.user.login }}, your issue has been closed because it has been inactive for a long time.
+
+            你好 @${{ github.event.issue.user.login }}，你的 issue 因为长时间不活跃而被自动关闭。
+
+            こんにちは、@${{ github.event.issue.user.login }}さん、お問い合わせは長期間活動がないため、閉じられました。
+      
   check-title:
     runs-on: ubuntu-latest
     if: github.event.issue.title == '[BUG]' || github.event.issue.title == '[FEATURE]' || (contains(github.event.issue.title, '[BUG]') == false && contains(github.event.issue.title, '[FEATURE]') == false)
@@ -17,7 +33,7 @@ jobs:
           issue-number: ${{ github.event.issue.number }}
           labels: 'Invalid'
           body: |
-            Hello @${{ github.event.issue.user.login }}, your issue has been closed because because the title does not conform to our specification.
+            Hello @${{ github.event.issue.user.login }}, your issue has been closed because the title does not conform to our specification.
 
             你好 @${{ github.event.issue.user.login }}，为了能够进行高效沟通，我们对 issue 有一定的格式要求，你的 issue 因为标题不符合规范而被自动关闭。
 
