--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "electron-builder": "^24.4.0",
     "electron-vite": "^1.0.23",
     "eslint": "^8.44.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-vue": "^9.15.0",
-    "prettier": "^2.8.8"
+    "prettier": "^3.0.0"
   }
 }
