--- a/.github/workflows/CI-Test.yml
+++ b/.github/workflows/CI-Test.yml
@@ -17,9 +17,9 @@ jobs:
   ubuntu:
     strategy:
       matrix:
-        os-version: [ "x64" ]
+        os-version: [ "macos-latest", "windows-latest", "ubuntu-20.04" ]
 
-    runs-on: ubuntu-20.04
+    runs-on: ${{ matrix.os-version }}
     steps:
       - uses: actions/checkout@v3
         with:
