--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "sass": "^1.64.1",
     "systeminformation": "^5.18.7",
     "typescript": "^5.1.6",
+    "vfonts": "^0.0.3",
     "vite": "^4.4.7",
     "vitest": "^0.33.0",
     "vue": "^3.2.47",
