--- a/.github/workflows/issue-translator.yml
+++ b/.github/workflows/issue-translator.yml
@@ -6,7 +6,7 @@ on:
     types: [opened]
 
 jobs:
-  build:
+  translate:
     runs-on: ubuntu-latest
     steps:
       - uses: usthe/issues-translate-action@v2.7
