--- a/package.json
+++ b/package.json
@@ -27,34 +27,16 @@
   "engines": {
     "node": ">=16.0.0"
   },
-  "dependencies": {
-    "@intlify/unplugin-vue-i18n": "^0.12.2",
-    "@vicons/antd": "^0.12.0",
-    "@vicons/ionicons5": "^0.12.0",
-    "core-js": "^3.32.0",
-    "jsdom": "^22.1.0",
-    "naive-ui": "^2.34.3",
-    "pinia": "^2.1.6",
-    "pinia-plugin-persistedstate": "^3.2.0",
-    "sass": "^1.64.1",
-    "systeminformation": "^5.18.10",
-    "typescript": "^5.1.6",
-    "vfonts": "^0.0.3",
-    "vite": "^4.4.7",
-    "vitest": "^0.33.0",
-    "vue": "^3.2.47",
-    "vue-clipboard3": "^2.0.0",
-    "vue-i18n": "^9.2.2",
-    "vue-router": "^4.2.4",
-    "vue-tsc": "^1.8.8"
-  },
   "devDependencies": {
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron-toolkit/utils": "^2.0.0",
     "@electron/notarize": "^2.1.0",
+    "@intlify/unplugin-vue-i18n": "^0.12.2",
     "@rushstack/eslint-patch": "^1.3.2",
     "@types/node": "20.4.5",
+    "@vicons/antd": "^0.12.0",
+    "@vicons/ionicons5": "^0.12.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitest/coverage-v8": "^0.33.0",
     "@vue/eslint-config-prettier": "^7.1.0",
@@ -62,9 +44,24 @@
     "@vue/test-utils": "^2.4.1",
     "electron": "^25.3.1",
     "electron-builder": "^24.4.0",
-    "electron-vite": "^1.0.25",
+    "electron-vite": "^1.0.26",
     "eslint": "^8.46.0",
     "eslint-plugin-vue": "^9.16.1",
-    "prettier": "^2.8.8"
+    "jsdom": "^22.1.0",
+    "naive-ui": "^2.34.4",
+    "pinia": "^2.1.6",
+    "pinia-plugin-persistedstate": "^3.2.0",
+    "prettier": "^2.8.8",
+    "sass": "^1.64.2",
+    "systeminformation": "^5.18.10",
+    "typescript": "^5.1.6",
+    "vfonts": "^0.0.3",
+    "vite": "^4.4.8",
+    "vitest": "^0.33.0",
+    "vue": "^3.3.4",
+    "vue-clipboard3": "^2.0.0",
+    "vue-i18n": "^9.2.2",
+    "vue-router": "^4.2.4",
+    "vue-tsc": "^1.8.8"
   }
 }
