--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -30,6 +30,10 @@ jobs:
         with:
           node-version: 20
 
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
       - name: Download Final2x-core and unzip
         run: |
           cd .\resources
@@ -39,8 +43,8 @@ jobs:
 
       - name: build
         run: |
-          npm install
-          npm run build:win-${{ matrix.os-version }}
+          pnpm install
+          pnpm run build:win-${{ matrix.os-version }}
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
@@ -95,6 +99,10 @@ jobs:
         with:
           node-version: 20
 
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
       - name: Download Final2x-core x64
         if: matrix.os-version == 'x64'
         run: |
@@ -115,8 +123,8 @@ jobs:
 
       - name: build
         run: |
-          npm install
-          npm run build:mac-${{ matrix.os-version }}
+          pnpm install
+          pnpm run build:mac-${{ matrix.os-version }}
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
@@ -152,6 +160,10 @@ jobs:
         with:
           node-version: 20
 
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
       - name: Download Final2x-core and unzip
         run: |
           cd ./resources
@@ -161,8 +173,8 @@ jobs:
 
       - name: build
         run: |
-          npm install
-          npm run build:linux-${{ matrix.os-version }}
+          pnpm install
+          pnpm run build:linux-${{ matrix.os-version }}
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
@@ -214,10 +226,14 @@ jobs:
         with:
           node-version: 20
 
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
       - name: build
         run: |
-          npm install
-          npm run build:linux-${{ matrix.os-version }}
+          pnpm install
+          pnpm run build:linux-${{ matrix.os-version }}
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
