--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts,.vue --fix",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
     "typecheck:web": "vue-tsc --noEmit -p tsconfig.web.json --composite false",
-    "typecheck": "npm run typecheck:node && npm run typecheck:web",
+    "typecheck": "pnpm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
     "build": "electron-vite build",
     "postinstall": "electron-builder install-app-deps",
-    "build:mac-arm64": "npm run build && electron-builder --mac --arm64",
-    "build:mac-x64": "npm run build && electron-builder --mac --x64",
-    "build:win-arm64": "npm run build && electron-builder --win --arm64",
-    "build:win-x64": "npm run build && electron-builder --win --x64",
-    "build:linux-x64": "npm run build && electron-builder --linux --x64"
+    "build:mac-arm64": "pnpm run build && electron-builder --mac --arm64",
+    "build:mac-x64": "pnpm run build && electron-builder --mac --x64",
+    "build:win-arm64": "pnpm run build && electron-builder --win --arm64",
+    "build:win-x64": "pnpm run build && electron-builder --win --x64",
+    "build:linux-x64": "pnpm run build && electron-builder --linux --x64"
   },
   "engines": {
     "node": ">=16.0.0"
