--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@vicons/antd": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
     "core-js": "^3.32.0",
+    "naive-dark-mode": "^0.1.3",
     "naive-ui": "^2.34.4",
     "pinia": "^2.1.6",
     "pinia-plugin-persistedstate": "^3.2.0",
@@ -59,11 +60,11 @@
     "electron-vite": "^1.0.27",
     "eslint": "^8.46.0",
     "eslint-plugin-vue": "^9.16.1",
+    "jsdom": "^22.1.0",
     "prettier": "^3.0.1",
-    "vite": "^4.4.9",
-    "vue-tsc": "^1.8.8",
-    "vitest": "^0.34.1",
     "typescript": "^5.1.6",
-    "jsdom": "^22.1.0"
+    "vite": "^4.4.9",
+    "vitest": "^0.34.1",
+    "vue-tsc": "^1.8.8"
   }
 }
