--- a/.github/workflows/issue-helper.yml
+++ b/.github/workflows/issue-helper.yml
@@ -15,11 +15,11 @@ jobs:
           token: ${{ secrets.GH_TOKEN }}
           inactive-day: 30  
           body: |
-            Hello @${{ github.event.issue.user.login }}, your issue has been closed because it has been inactive for a long time.
+            Hello! your issue has been closed because it has been inactive for a long time.
 
-            你好 @${{ github.event.issue.user.login }}，你的 issue 因为长时间不活跃而被自动关闭。
+            你好，你的 issue 因为长时间不活跃而被自动关闭。
 
-            こんにちは、@${{ github.event.issue.user.login }}さん、お問い合わせは長期間活動がないため、閉じられました。
+            こんにちは、お問い合わせは長期間活動がないため、閉じられました。
       
   check-title:
     runs-on: ubuntu-latest
