--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "dev": "electron-vite dev",
     "test": "vitest",
     "test-cov": "vitest run --coverage",
-    "format": "prettier --write .",
-    "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts,.vue --fix",
+    "lint": "prettier --write . && eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts,.vue --fix",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
     "typecheck:web": "vue-tsc --noEmit -p tsconfig.web.json --composite false",
     "typecheck": "pnpm run typecheck:node && npm run typecheck:web",
@@ -37,31 +36,31 @@
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
     "sass": "^1.69.5",
-    "systeminformation": "^5.21.16",
+    "systeminformation": "^5.21.17",
     "vfonts": "^0.0.3",
     "vue": "^3.3.8",
-    "vue-i18n": "^9.6.5",
+    "vue-i18n": "^9.7.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron-toolkit/utils": "^2.0.1",
-    "@electron/notarize": "^2.1.0",
+    "@electron/notarize": "^2.2.0",
     "@rushstack/eslint-patch": "^1.5.1",
-    "@types/node": "20.8.9",
-    "@vitejs/plugin-vue": "^4.4.1",
+    "@types/node": "20.9.1",
+    "@vitejs/plugin-vue": "^4.5.0",
     "@vitest/coverage-v8": "^0.34.6",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/test-utils": "^2.4.1",
-    "electron": "^26.5.0",
+    "@vue/test-utils": "^2.4.2",
+    "electron": "^26.6.0",
     "electron-builder": "^24.6.4",
-    "electron-vite": "^1.0.28",
-    "eslint": "^8.53.0",
+    "electron-vite": "^1.0.29",
+    "eslint": "^8.54.0",
     "eslint-plugin-vue": "^9.18.1",
     "jsdom": "^22.1.0",
-    "prettier": "^3.0.3",
+    "prettier": "^3.1.0",
     "typescript": "^5.2.2",
     "vite": "^4.5.0",
     "vitest": "^0.34.6",
