--- a/.github/ISSUE_TEMPLATE/feature.yaml
+++ b/.github/ISSUE_TEMPLATE/feature.yaml
@@ -1,7 +1,7 @@
 name: 🚀 Feature request | 功能请求 | フィーチャーリクエスト
 description: Suggest an idea for this project ｜ 为项目提供一个创意建议 ｜ このプロジェクトにアイデアを提案する
-title: "[FEATURE] "
-labels: ["enhancement"]
+title: '[FEATURE] '
+labels: ['enhancement']
 body:
   - type: checkboxes
     id: checks
@@ -13,7 +13,7 @@ body:
     id: is-related
     attributes:
       label: Is your feature request related to a problem? | 你的feature请求是否与一个问题有关？ | あなたのfeatureリクエストは質問に関連していますか？
-      description: | 
+      description: |
         A clear and concise description of what the problem is
         请清楚而简明地描述问题是什么
         問題が何であるかを明確かつ簡潔に説明してください
