--- a/.github/workflows/CI-Test.yml
+++ b/.github/workflows/CI-Test.yml
@@ -17,7 +17,7 @@ jobs:
   CI-Test:
     strategy:
       matrix:
-        os-version: [ "macos-latest", "windows-latest", "ubuntu-20.04" ]
+        os-version: ['macos-latest', 'windows-latest', 'ubuntu-20.04']
 
     runs-on: ${{ matrix.os-version }}
     steps:
