--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -4,7 +4,6 @@ on:
   workflow_dispatch:
 
 jobs:
-
   setup:
     runs-on: ubuntu-latest
     outputs:
@@ -14,11 +13,10 @@ jobs:
         id: get_date
         run: echo "DATE=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
 
-
   windows:
     strategy:
       matrix:
-        os-version: [ "x64", "arm64" ]
+        os-version: ['x64', 'arm64']
 
     runs-on: windows-latest
     steps:
@@ -49,13 +47,13 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
       - name: zip-unpacked-x64
-        if : matrix.os-version == 'x64'
+        if: matrix.os-version == 'x64'
         run: |
           cd .\dist\win-unpacked
           7z a -r Final2x-windows-${{ matrix.os-version }}-unpacked.zip *
 
       - name: zip-unpacked-arm64
-        if : matrix.os-version == 'arm64'
+        if: matrix.os-version == 'arm64'
         run: |
           cd .\dist\win-arm64-unpacked
           7z a -r Final2x-windows-${{ matrix.os-version }}-unpacked.zip *
@@ -72,22 +70,21 @@ jobs:
           path: dist/*.exe
 
       - name: upload-unpacked-x64
-        if : matrix.os-version == 'x64'
+        if: matrix.os-version == 'x64'
         uses: actions/upload-artifact@v3
         with:
           path: dist/win-unpacked/Final2x-windows-${{ matrix.os-version }}-unpacked.zip
 
       - name: upload-unpacked-arm64
-        if : matrix.os-version == 'arm64'
+        if: matrix.os-version == 'arm64'
         uses: actions/upload-artifact@v3
         with:
           path: dist/win-arm64-unpacked/Final2x-windows-${{ matrix.os-version }}-unpacked.zip
 
-
   macos:
     strategy:
       matrix:
-        os-version: [ "x64", "arm64" ]
+        os-version: ['x64', 'arm64']
 
     runs-on: macos-latest
     steps:
@@ -144,11 +141,10 @@ jobs:
         with:
           path: dist/*.zip
 
-
   ubuntu:
     strategy:
       matrix:
-        os-version: [ "x64" ]
+        os-version: ['x64']
 
     runs-on: ubuntu-20.04
     steps:
@@ -210,11 +206,10 @@ jobs:
         with:
           path: dist/linux-unpacked/Final2x-ubuntu-${{ matrix.os-version }}-unpacked.zip
 
-
   linux-pip:
     strategy:
       matrix:
-        os-version: [ "x64" ]
+        os-version: ['x64']
 
     runs-on: ubuntu-20.04
     steps:
@@ -269,9 +264,8 @@ jobs:
         with:
           path: dist/linux-unpacked/Final2x-linux-pip-${{ matrix.os-version }}-unpacked.zip
 
-
   Release:
-    needs: [ setup, windows, macos, ubuntu, linux-pip ]
+    needs: [setup, windows, macos, ubuntu, linux-pip]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v3
