--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "Final2x",
   "productName": "Final2x",
   "version": "1.1.5",
+  "type": "module",
   "description": "A cross-platform image super-resolution tool.",
   "main": "./out/main/index.js",
   "author": "Tohrusky",
@@ -16,7 +17,7 @@
     "typecheck": "pnpm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
     "build": "electron-vite build",
-    "postinstall": "electron-builder install-app-deps",
+    "postinstall": "electron-builder install-app-deps && node ./resources/download-core.js",
     "build:mac-arm64": "pnpm run build && electron-builder --mac --arm64",
     "build:mac-x64": "pnpm run build && electron-builder --mac --x64",
     "build:win-arm64": "pnpm run build && electron-builder --win --arm64",
@@ -43,6 +44,8 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "extract-zip": "^2.0.1",
+    "node-fetch": "^3.3.2",
     "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron-toolkit/utils": "^3.0.0",
@@ -56,7 +59,7 @@
     "@vue/test-utils": "^2.4.3",
     "electron": "^26.6.3",
     "electron-builder": "^24.9.1",
-    "electron-vite": "^1.0.29",
+    "electron-vite": "^2.0.0-beta.2",
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.19.2",
     "jsdom": "^23.0.1",
