--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   "scripts": {
     "dev": "electron-vite dev",
     "test": "vitest",
-    "test-cov": "vitest run --coverage",
+    "test-cov": "vitest run --coverage.enabled --coverage.exclude='**/*.vue' --coverage.include='src/renderer' --coverage.exclude='src/renderer/src/*.ts' ",
     "lint": "prettier --write . && eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts,.vue --fix",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
     "typecheck:web": "vue-tsc --noEmit -p tsconfig.web.json --composite false",
     "typecheck": "pnpm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
     "build": "electron-vite build",
-    "postinstall": "electron-builder install-app-deps",
+    "postinstall": "electron-builder install-app-deps && node ./resources/download-core.js",
     "build:mac-arm64": "pnpm run build && electron-builder --mac --arm64",
     "build:mac-x64": "pnpm run build && electron-builder --mac --x64",
     "build:win-arm64": "pnpm run build && electron-builder --win --arm64",
@@ -27,43 +27,45 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
-    "@intlify/unplugin-vue-i18n": "^1.5.0",
+    "@intlify/unplugin-vue-i18n": "^1.6.0",
     "@vicons/antd": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
-    "core-js": "^3.33.2",
-    "naive-dark-mode": "^0.2.1",
-    "naive-ui": "^2.35.0",
+    "core-js": "^3.35.0",
+    "naive-dark-mode": "^0.2.2",
+    "naive-ui": "^2.36.0",
     "pinia": "^2.1.7",
-    "pinia-plugin-persistedstate": "^3.2.0",
-    "sass": "^1.69.5",
-    "systeminformation": "^5.21.17",
+    "pinia-plugin-persistedstate": "^3.2.1",
+    "sass": "^1.69.6",
+    "systeminformation": "^5.21.22",
     "vfonts": "^0.0.3",
-    "vue": "^3.3.8",
-    "vue-i18n": "^9.7.0",
+    "vue": "^3.4.3",
+    "vue-i18n": "^9.8.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@electron-toolkit/preload": "^2.0.0",
+    "extract-zip": "^2.0.1",
+    "node-fetch": "^3.3.2",
+    "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
-    "@electron-toolkit/utils": "^2.0.1",
+    "@electron-toolkit/utils": "^3.0.0",
     "@electron/notarize": "^2.2.0",
-    "@rushstack/eslint-patch": "^1.5.1",
-    "@types/node": "20.9.1",
-    "@vitejs/plugin-vue": "^4.5.0",
-    "@vitest/coverage-v8": "^0.34.6",
-    "@vue/eslint-config-prettier": "^8.0.0",
+    "@rushstack/eslint-patch": "^1.6.1",
+    "@types/node": "20.10.6",
+    "@vitejs/plugin-vue": "^5.0.2",
+    "@vitest/coverage-v8": "^1.1.1",
+    "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/test-utils": "^2.4.2",
-    "electron": "^26.6.0",
-    "electron-builder": "^24.6.4",
-    "electron-vite": "^1.0.29",
-    "eslint": "^8.54.0",
-    "eslint-plugin-vue": "^9.18.1",
-    "jsdom": "^22.1.0",
-    "prettier": "^3.1.0",
-    "typescript": "^5.2.2",
-    "vite": "^4.5.0",
-    "vitest": "^0.34.6",
-    "vue-tsc": "^1.8.22"
+    "@vue/test-utils": "^2.4.3",
+    "electron": "^26.6.3",
+    "electron-builder": "^24.9.1",
+    "electron-vite": "^2.0.0-beta.2",
+    "eslint": "^8.56.0",
+    "eslint-plugin-vue": "^9.19.2",
+    "jsdom": "^23.0.1",
+    "prettier": "^3.1.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.10",
+    "vitest": "^1.1.1",
+    "vue-tsc": "^1.8.27"
   }
 }
