build: Update dependencies to latest versions

--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
     "@vicons/ionicons5": "^0.12.0",
     "core-js": "^3.35.0",
     "naive-dark-mode": "^0.2.2",
-    "naive-ui": "^2.36.0",
+    "naive-ui": "^2.37.3",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
-    "sass": "^1.69.6",
-    "systeminformation": "^5.21.22",
+    "sass": "^1.70.0",
+    "systeminformation": "^5.21.23",
     "vfonts": "^0.0.3",
-    "vue": "^3.4.3",
-    "vue-i18n": "^9.8.0",
+    "vue": "^3.4.15",
+    "vue-i18n": "^9.9.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
@@ -47,25 +47,25 @@
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron-toolkit/utils": "^3.0.0",
     "@electron/notarize": "^2.2.0",
-    "@rushstack/eslint-patch": "^1.6.1",
-    "@types/node": "20.10.6",
-    "@vitejs/plugin-vue": "^5.0.2",
-    "@vitest/coverage-v8": "^1.1.1",
+    "@rushstack/eslint-patch": "^1.7.0",
+    "@types/node": "20.11.5",
+    "@vitejs/plugin-vue": "^5.0.3",
+    "@vitest/coverage-v8": "^1.2.1",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.3",
-    "electron": "^27.2.0",
+    "electron": "^27.2.4",
     "electron-builder": "^24.9.1",
-    "electron-vite": "2.0.0-beta.2",
+    "electron-vite": "^2.0.0",
     "eslint": "^8.56.0",
-    "eslint-plugin-vue": "^9.19.2",
+    "eslint-plugin-vue": "^9.20.1",
     "extract-zip": "^2.0.1",
-    "jsdom": "^23.0.1",
+    "jsdom": "^23.2.0",
     "node-fetch": "^3.3.2",
-    "prettier": "^3.1.1",
+    "prettier": "^3.2.4",
     "typescript": "^5.3.3",
-    "vite": "^5.0.10",
-    "vitest": "^1.1.1",
+    "vite": "^5.0.12",
+    "vitest": "^1.2.1",
     "vue-tsc": "^1.8.27"
   }
 }
