--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "electron-vite dev",
     "test": "vitest",
-    "test-cov": "vitest run --coverage.enabled --coverage.exclude='**/*.vue' --coverage.include='src/renderer' --coverage.exclude='src/renderer/src/*.ts' ",
+    "test-cov": "vitest run --coverage",
     "lint": "prettier --write . && eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts,.vue --fix",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
     "typecheck:web": "vue-tsc --noEmit -p tsconfig.web.json --composite false",
@@ -24,48 +24,48 @@
     "build:linux-x64": "pnpm run build && electron-builder --linux --x64"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=18.0.0"
   },
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^2.0.0",
     "@vicons/antd": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
-    "core-js": "^3.35.0",
-    "naive-dark-mode": "^0.2.2",
+    "core-js": "^3.36.0",
+    "naive-dark-mode": "^0.2.3",
     "naive-ui": "^2.37.3",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
-    "sass": "^1.70.0",
-    "systeminformation": "^5.21.23",
+    "sass": "^1.71.1",
+    "systeminformation": "^5.22.0",
     "vfonts": "^0.0.3",
-    "vue": "^3.4.15",
-    "vue-i18n": "^9.9.0",
+    "vue": "^3.4.19",
+    "vue-i18n": "^9.9.1",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron-toolkit/utils": "^3.0.0",
-    "@electron/notarize": "^2.2.0",
-    "@rushstack/eslint-patch": "^1.7.0",
+    "@electron/notarize": "^2.3.0",
+    "@rushstack/eslint-patch": "^1.7.2",
     "@types/node": "20.11.5",
-    "@vitejs/plugin-vue": "^5.0.3",
-    "@vitest/coverage-v8": "^1.2.1",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vitest/coverage-v8": "^1.3.1",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/test-utils": "^2.4.3",
-    "electron": "^27.2.4",
-    "electron-builder": "^24.9.1",
+    "@vue/test-utils": "^2.4.4",
+    "electron": "^27.3.2",
+    "electron-builder": "^24.12.0",
     "electron-vite": "^2.0.0",
     "eslint": "^8.56.0",
-    "eslint-plugin-vue": "^9.20.1",
+    "eslint-plugin-vue": "^9.21.1",
     "extract-zip": "^2.0.1",
     "jsdom": "^23.2.0",
     "node-fetch": "^3.3.2",
-    "prettier": "^3.2.4",
+    "prettier": "^3.2.5",
     "typescript": "^5.3.3",
-    "vite": "^5.0.12",
-    "vitest": "^1.2.1",
+    "vite": "^5.1.4",
+    "vitest": "^1.3.1",
     "vue-tsc": "^1.8.27"
   }
 }
