build: Update dependencies to latest versions

--- a/.github/workflows/CI-Test.yml
+++ b/.github/workflows/CI-Test.yml
@@ -37,6 +37,7 @@ jobs:
         run: |
           pnpm install
           pnpm run lint
+          pnpm run typecheck
           pnpm run test-cov
         env:
           SKIP_DOWNLOAD_CORE: true
