--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "typecheck": "pnpm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
     "build": "electron-vite build",
-    "postinstall": "electron-builder install-app-deps && node ./resources/download-core.js",
+    "postinstall": "electron-builder install-app-deps",
     "build:mac-arm64": "pnpm run build && electron-builder --mac --arm64",
     "build:mac-x64": "pnpm run build && electron-builder --mac --x64",
     "build:win-arm64": "pnpm run build && electron-builder --win --arm64",
     "build:win-x64": "pnpm run build && electron-builder --win --x64",
-    "build:linux-x64": "pnpm run build && electron-builder --linux --x64"
+    "build:linux-x64": "pnpm run build && electron-builder --linux --x64",
+    "build:linux-arm64": "pnpm run build && electron-builder --linux --arm64"
   },
   "engines": {
     "node": ">=18.0.0"
