--- a/.github/workflows/CI-build.yml
+++ b/.github/workflows/CI-build.yml
@@ -134,7 +134,7 @@ jobs:
   linux-pip:
     strategy:
       matrix:
-        os-version: ['x64', 'arm64']
+        os-version: ['x64']
 
     runs-on: ubuntu-20.04
     steps:
