--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "typecheck": "pnpm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
     "build": "electron-vite build",
-    "postinstall": "electron-builder install-app-deps",
+    "postinstall": "electron-builder install-app-deps && node ./resources/download-core.js",
     "build:mac-arm64": "pnpm run build && electron-builder --mac --arm64",
     "build:mac-x64": "pnpm run build && electron-builder --mac --x64",
     "build:win-arm64": "pnpm run build && electron-builder --win --arm64",
